--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -3945,6 +3945,7 @@ textarea.form-control-lg {
   color: #0d6efd;
   text-decoration: none;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
+  font-size: 24px;
 }
 @media (prefers-reduced-motion: reduce) {
   .nav-link {
