--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -87,6 +87,9 @@ body {
   background-color: var(--bs-body-bg);
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  /* filter: grayscale(1);
+   * este filtro se utiliza para comprobar que la pagina web es apta para daltonicos
+   */
 }
 
 hr {
