--- a/views/home.hbs
+++ b/views/home.hbs
@@ -18,14 +18,14 @@
             <!-- Navigation-->
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <div class="container px-5">
-                    <a class="navbar-brand" href="/web/home.html">Lucatic Enterprise</a>
+                    <a class="navbar-brand" href="./web/home.html">Lucatic Enterprise</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                            <li class="nav-item"><a class="nav-link" href="/web/home.html"><u>Home</u></a></li>
-                            <li class="nav-item"><a class="nav-link" href="/web/equipo.html"><u>Equipo</u></a></li>
-                            <li class="nav-item"><a class="nav-link" href="/web/contact.html"><u>Contacto</u></a></li>
-                            <li class="nav-item"><a class="nav-link" href="/web/service.html"><u>Servicios</u></a></li>
+                            <li class="nav-item"><a class="nav-link" href="./web/home.html"><u>Home</u></a></li>
+                            <li class="nav-item"><a class="nav-link" href="./web/equipo.html"><u>Equipo</u></a></li>
+                            <li class="nav-item"><a class="nav-link" href="./web/contact.html"><u>Contacto</u></a></li>
+                            <li class="nav-item"><a class="nav-link" href="./web/service.html"><u>Servicios</u></a></li>
                         </ul>
                     </div>
                 </div>
