FUNCIONA POR FIN

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -43,7 +43,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-xl-5 col-xxl-6 d-none d-xl-block text-center"><img class="img-fluid rounded-3 my-5" src="/web/assets/Home_Portada_Servicios.jpg" alt="..." /></div>
+                        <div class="col-xl-5 col-xxl-6 d-none d-xl-block text-center"><img class="img-fluid rounded-3 my-5" src="assets/Home_Portada_Servicios.jpg" alt="..." /></div>
                     </div>
                 </div>
             </header>
@@ -83,7 +83,7 @@
                             <div class="text-center">
                                 <div class="fs-4 mb-4 fst-italic">"Es más fácil amar a una marca cuando la marca te ama a ti"</div>
                                 <div class="d-flex align-items-center justify-content-center">
-                                    <img class="rounded-circle me-3" src="/web/assets/Cliente.jpg" alt="Imagen representativa de un cliente." />
+                                    <img class="rounded-circle me-3" src="assets/Cliente.jpg" alt="Imagen representativa de un cliente." />
                                     <div class="fw-bold">
                                         Jorge Nitales
                                         <span class="fw-bold text-primary mx-1">/</span>
@@ -109,7 +109,7 @@
                     <div class="row gx-5">
                         <div class="col-lg-4 mb-5">
                             <div class="card h-100 shadow border-0">
-                                <img class="card-img-top" src="/web/assets/Merk.jpg" alt="Empleados de Merk trabajando." />
+                                <img class="card-img-top" src="assets/Merk.jpg" alt="Empleados de Merk trabajando." />
                                 <div class="card-body p-4">
                                     <a class="text-decoration-none link-dark stretched-link"><h5 class="card-title mb-3">Merk</h5></a>
                                     <p class="card-text mb-0">Trabajamos con Merck para dotar a sus empleados del área de packaging de dispositivos inteligentes para ofrecerles mayor seguridad y eficiencia</p>
@@ -118,7 +118,7 @@
                         </div>
                         <div class="col-lg-4 mb-5">
                             <div class="card h-100 shadow border-0">
-                                <img class="card-img-top" src="/web/assets/Vodafone.jpg" alt="Persona sosteniendo un telefono movil." />
+                                <img class="card-img-top" src="assets/Vodafone.jpg" alt="Persona sosteniendo un telefono movil." />
                                 <div class="card-body p-4">
                                     <a class="text-decoration-none link-dark stretched-link"><h5 class="card-title mb-3">Vodafone</h5></a>
                                     <p class="card-text mb-0">Ayudamos a Vodafone a transformar su organización financiera global gracias a la migración a SAP S/4HANA®.</p>
@@ -127,7 +127,7 @@
                         </div>
                         <div class="col-lg-4 mb-5">
                             <div class="card h-100 shadow border-0">
-                                <img class="card-img-top" src="/web/assets/Metro.jpg" alt="Tren de metro parado en una estación." />
+                                <img class="card-img-top" src="assets/Metro.jpg" alt="Tren de metro parado en una estación." />
                                 <div class="card-body p-4">
                                     <a class="text-decoration-none link-dark stretched-link"><h5 class="card-title mb-3">Metro de Madrid</h5></a>
                                     <p class="card-text mb-0">Creamos un sistema de ventilación con IA que ha reducido en un 25% los costes energéticos de ventilación, además de garantizar la calidad del aire y el confort de los viajeros.</p>
