--- a/views/service.hbs
+++ b/views/service.hbs
@@ -7,11 +7,11 @@
         <meta name="author" content="" />
         <title>Lucatic Enterprise</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="/web/assets/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Bootstrap icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="/web/css/styles.css" rel="stylesheet" />
+        <link href="css/styles.css" rel="stylesheet" />
     </head>
     <body class="d-flex flex-column h-100">
         <main class="flex-shrink-0">
@@ -22,10 +22,10 @@
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                            <li class="nav-item"><a class="nav-link" href="/web/home.html"><u>Home</u></a></li>
-                            <li class="nav-item"><a class="nav-link" href="/web/equipo.html"><u>Equipo</u></a></li>
-                            <li class="nav-item"><a class="nav-link" href="/web/contact.html"><u>Contacto</u></a></li>
-                            <li class="nav-item"><a class="nav-link" href="/web/service.html"><u>Servicios</u></a></li>
+                            <li class="nav-item"><a class="nav-link" href="home.html"><u>Home</u></a></li>
+                            <li class="nav-item"><a class="nav-link" href="equipo.html"><u>Equipo</u></a></li>
+                            <li class="nav-item"><a class="nav-link" href="contact.html"><u>Contacto</u></a></li>
+                            <li class="nav-item"><a class="nav-link" href="service.html"><u>Servicios</u></a></li>
                         </ul>
                     </div>
                 </div>
