--- a/views/contacto.hbs
+++ b/views/contacto.hbs
@@ -59,19 +59,19 @@
                                     </div>
                                     <!-- Email address input-->
                                     <div class="form-floating mb-3">
-                                        <input type="email" id="email" name="email" type="text" placeholder="Email" class="form-control" required>
+                                        <input type="email" id="email" name="email" placeholder="Email" class="form-control" required>
                                         <label for="email">Email</label>
                                 
                                     </div>
                                     <!-- Phone number input-->
                                     <div class="form-floating mb-3">
-                                        <input type="number" id="teléfono" name="teléfono" type="text" placeholder="Teléfono" class="form-control" required>
+                                        <input type="number" id="teléfono" name="teléfono" placeholder="Teléfono" class="form-control" required>
                                         <label for="phone">Teléfono</label>
                                         <div class="invalid-feedback" data-sb-feedback="phone:required">Debes poner tu teléfono</div>
                                     </div>
                                     <!-- Message input-->
                                     <div class="form-floating mb-3">
-                                        <textarea class="form-control" id="mensaje" name="mensaje" placeholder="Escribe aquí tu mensaje." rows="7"></textarea required>
+                                        <textarea class="form-control" id="mensaje" name="mensaje" placeholder="Escribe aquí tu mensaje." rows="7" required></textarea>
                                         <label for="message">Mensaje</label>
                                         <div class="invalid-feedback" data-sb-feedback="message:required">Debes escribir un mensaje</div>
                                     </div>
@@ -94,8 +94,8 @@
                                 </form>
                             </div>
                         </div>
-                    </div>
-                    
+                    </div> 
+                    </div>    
             </section>
         </main>
         <!-- Footer-->
